Fixed bug #36148 (unpack("H*hex", $data) is adding an extra character to the end of the string).